# cses_template

./: .env  .gitignore  Cargo.toml  build.rs  cargo-generate.toml  test_template.txt
src/: main.rs
