[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2018"
description = """{{description}}"""
authors = [ "{{authors}}" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
scraper = "0.13"
zip = "0.6"
dotenvy = "0.15" # Better than 'dotenv'
